<resources>
    <string name="app_name">StepTracker</string>
    <string name="name">Step Tracker</string>
    <string name="enter_name">Name</string>
    <string name="enter_weight">Weight</string>
    <string name="enter_height">Height</string>
    <string name="enter_goal">Daily goal</string>
    <string name="save_button">Save</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="cancel_button">Cancel</string>
    <string name="suffixStep">steps</string>
    <string name="suffixWeight">kg</string>
    <string name="suffixHeight">cm</string>
    <string name="name_input_error">No more than 20 characters</string>
    <string name="input_error">No more than 3 characters</string>
    <string name="text_label_1">Today</string>
    <string name="text_label_2">Progress</string>
    <string name="text_label_3">Weather</string>
    <string name="tab_layout_des">Choosing topic from tabs</string>
    <string name="slogan">Now walk it out</string>
    <string name="input_empty">Field should not be blank</string>
    <string name="initial_step">0</string>
    <string name="steps">steps</string>
    <string name="over">/</string>
    <string name="floating_button_des">Update user data</string>
    <string name="user_update_title">Update data</string>
    <string name="total_step"> Total Steps</string>
    <string name="average"> Average</string>
    <string name="best"> Best</string>
    <string name="north"> North</string>
    <string name="south"> South</string>
    <string name="east"> East</string>
    <string name="west"> West</string>
    <string name="zero">0</string>
    <string name ="image">app logo</string>
    <string name ="name_input_layout">Enter name box</string>
    <string name ="weight_input_layout">Enter weight box</string>
    <string name ="height_input_layout">Enter height box</string>
    <string name ="goal_input_layout">Enter daily goal box</string>
    <string name="step_tracker_app">Step Tracker App</string>
    <string name="submit_button">Submit</string>
    <string name="update_form">Update user data form</string>
    <string name="progress_bar">Progress bar</string>
    <string name="total">Total</string>
    <string name="graph">graph show latest 7days data</string>
    <string name="map">map shows route</string>
    <string name="distance">distance icon</string>
    <string name="kcal">kcal icon</string>
    <string name="timer">time icon</string>
    <string name="recycler_view">weather prediction</string>
    <string name="humidity">humidity icon</string>
    <string name="wind_speed">wind speed icon</string>
    <string name="wind_direction">wind direction icon</string>
    <string name="date">date</string>
    <string name="temp">temperature icon</string>
    <string name="icon">weather icon</string>

</resources>